FIX: professionals parameters in service